crates/kply-cli/tests/snapshots/cli__session_plan_policy_denied_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "error": {
    "code": "policy",
    "exit_code": 1,
    "message": "no enabled policy allows this session plan: policy `warehouse-only` does not allow namespace `shop`"
  }
}
