crates/kply-cli/tests/snapshots/cli__unknown_command_json_usage_error.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "error": {
    "code": "usage",
    "details": "error: unrecognized subcommand 'unknown'\n\nUsage: kply [OPTIONS] [COMMAND]\n\nFor more information, try '--help'.\n",
    "exit_code": 2,
    "message": "error: unrecognized subcommand 'unknown'"
  }
}
