crates/kply-cli/tests/snapshots/cli__unknown_command_usage_error.snap
---
source: crates/kply-cli/tests/cli.rs
expression: stderr
---
kply error: usage

error: unrecognized subcommand 'unknown'

Usage: kply [OPTIONS] [COMMAND]

For more information, try '--help'.
