crates/kply-cli/tests/snapshots/cli__unknown_flag_usage_error.snap
---
source: crates/kply-cli/tests/cli.rs
expression: stderr
---
kply error: usage

error: unexpected argument '--bad-flag' found

Usage: kply [OPTIONS] [COMMAND]

For more information, try '--help'.
