crates/kply-cli/tests/snapshots/cli__verbose_config_stderr.snap
---
source: crates/kply-cli/tests/cli.rs
expression: output
---
debug: command=<none> json=false quiet=false no_color=false config=kply.yaml
